[package]
name = "chain-actions"
version = "0.7.0"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"
description = "High-level Core-Ethereum functions that translate to on-chain transactions"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[features]
default = []
runtime-async-std = ["async-std", "hopr-db-sql/runtime-async-std"]
runtime-tokio = ["tokio", "hopr-db-sql/runtime-tokio"]
prometheus = [ "dep:hopr-metrics", "chain-rpc/prometheus", "hopr-db-sql/prometheus"]

[dependencies]
async-channel = { workspace = true }
async-std = { workspace = true, optional = true }
async-trait = { workspace = true }
async-lock = { workspace = true }
ethers = { workspace = true, default-features = false }
futures = { workspace = true }
futures-timer = { workspace = true }
lazy_static = { workspace = true }
multiaddr = "0.18"
serde = { workspace = true }
smart-default = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }

bindings = { workspace = true }
hopr-crypto-types = { workspace = true }
hopr-db-sql = { workspace = true }
chain-rpc = { workspace = true }
chain-types = { workspace = true }
hopr-metrics = { workspace = true, optional = true }
hopr-platform = { workspace = true }
tracing = { workspace = true }
hopr-internal-types = { workspace = true }
hopr-primitive-types = { workspace = true }

[dev-dependencies]
async-std = { workspace = true }
mockall = { workspace = true }
hex-literal = { workspace = true }
hopr-crypto-random = { workspace = true }
tracing-test = { workspace = true }
