[package]
name = "chain-actions"
version = "0.7.2"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"
description = "High-level Core-Ethereum functions that translate to on-chain transactions"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[features]
default = []
runtime-async-std = [
  "hopr-db-sql/runtime-async-std",
  "hopr-async-runtime/runtime-async-std",
]
runtime-tokio = [
  "hopr-db-sql/runtime-tokio",
  "hopr-async-runtime/runtime-tokio",
]
prometheus = [
  "dep:hopr-metrics",
  "hopr-chain-rpc/prometheus",
  "hopr-db-sql/prometheus",
]

[dependencies]
async-channel = { workspace = true }
async-lock = { workspace = true }
async-trait = { workspace = true }
ethers = { workspace = true, default-features = false }
futures = { workspace = true }
futures-timer = { workspace = true }
lazy_static = { workspace = true }
multiaddr = { workspace = true }
serde = { workspace = true }
smart-default = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

bindings = { workspace = true }
chain-types = { workspace = true }
hopr-async-runtime = { workspace = true }
hopr-chain-rpc = { workspace = true }
hopr-crypto-types = { workspace = true }
hopr-db-sql = { workspace = true }
hopr-internal-types = { workspace = true }
hopr-metrics = { workspace = true, optional = true }
hopr-platform = { workspace = true }
hopr-primitive-types = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
async-std = { workspace = true }
mockall = { workspace = true }
hex-literal = { workspace = true }
hopr-crypto-random = { workspace = true }
tracing-test = { workspace = true }
