[package]
name = "hopr-chain-actions"
version = "0.10.0"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"
description = "High-level Core-Ethereum functions that translate to on-chain transactions"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[features]
default = []
runtime-tokio = [
  "hopr-async-runtime/runtime-tokio",
  "hopr-chain-rpc/runtime-tokio",
]
prometheus = [
  "dep:hopr-metrics",
  "hopr-chain-rpc/prometheus",
]

[dependencies]
alloy = { workspace = true, default-features = false, features = [
  "essentials",
  "json-rpc",
  "node-bindings",
] }
async-channel = { workspace = true }
async-lock = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
lazy_static = { workspace = true }
multiaddr = { workspace = true }
serde = { workspace = true }
smart-default = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

hopr-bindings = { workspace = true }
hopr-chain-types = { workspace = true }
hopr-async-runtime = { workspace = true }
hopr-chain-rpc = { workspace = true }
hopr-crypto-types = { workspace = true }
hopr-api = { workspace = true }
hopr-internal-types = { workspace = true }
hopr-metrics = { workspace = true, optional = true }
hopr-platform = { workspace = true }
hopr-primitive-types = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
mockall = { workspace = true }
hex-literal = { workspace = true }
tokio = { workspace = true }
test-log = { workspace = true }

hopr-crypto-random = { workspace = true }
