[package]
name = "chain-api"
version = "0.3.0"
authors = ["HOPR Association <tech@hoprnet.org>"]
description = "Implements the main HOPR chain interface"
edition = "2021"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[features]
default = []
runtime-async-std = ["async-std", "chain-indexer/runtime-async-std", "hopr-db-sql/runtime-async-std", "chain-actions/runtime-async-std"]
runtime-tokio = ["tokio", "chain-indexer/runtime-tokio", "hopr-db-sql/runtime-tokio", "chain-actions/runtime-tokio"]
prometheus = ["chain-rpc/prometheus", "chain-actions/prometheus", "chain-indexer/prometheus", "hopr-db-sql/prometheus"]

[dependencies]
async-channel = { workspace = true }
async-std = { workspace = true, optional = true }
async-trait = { workspace = true }
async-lock = { workspace = true }
futures = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
smart-default = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }
validator = { workspace = true }

hopr-crypto-types = { workspace = true }
chain-actions = { workspace = true }
chain-indexer = { workspace = true }
chain-rpc = { workspace = true }
chain-types = { workspace = true }
core-path = { workspace = true }
hopr-internal-types = { workspace = true }
hopr-primitive-types = { workspace = true }
hopr-db-sql = { workspace = true }

[dev-dependencies]
async-std = { workspace = true }
hopr-db-sql = { workspace = true, features = ["runtime-async-std"] }

