[package]
name = "chain-api"
version = "0.3.1"
authors = ["HOPR Association <tech@hoprnet.org>"]
description = "Implements the main HOPR chain interface"
edition = "2021"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[features]
default = []
runtime-async-std = [
  "chain-actions/runtime-async-std",
  "chain-indexer/runtime-async-std",
  "hopr-db-sql/runtime-async-std",
  "hopr-async-runtime/runtime-async-std",
]
runtime-tokio = [
  "chain-actions/runtime-tokio",
  "chain-indexer/runtime-tokio",
  "hopr-db-sql/runtime-tokio",
  "hopr-async-runtime/runtime-tokio",
]
prometheus = [
  "hopr-chain-rpc/prometheus",
  "chain-actions/prometheus",
  "chain-indexer/prometheus",
  "hopr-db-sql/prometheus",
]

[dependencies]
async-channel = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
smart-default = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }

chain-actions = { workspace = true }
chain-indexer = { workspace = true }
hopr-chain-types = { workspace = true }
hopr-async-runtime = { workspace = true }
hopr-chain-rpc = { workspace = true }
hopr-crypto-types = { workspace = true }
hopr-db-sql = { workspace = true }
hopr-internal-types = { workspace = true }
hopr-primitive-types = { workspace = true }

[dev-dependencies]
async-std = { workspace = true }
hopr-db-sql = { workspace = true, features = ["runtime-async-std"] }
