[package]
name = "hopr-chain-api"
version = "0.6.1"
authors = ["HOPR Association <tech@hoprnet.org>"]
description = "Implements the main HOPR chain interface"
edition = "2021"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[features]
default = []
runtime-tokio = [
  "hopr-chain-actions/runtime-tokio",
  "hopr-chain-indexer/runtime-tokio",
  "hopr-db-sql/runtime-tokio",
  "hopr-async-runtime/runtime-tokio",
]
prometheus = [
  "hopr-chain-rpc/prometheus",
  "hopr-chain-actions/prometheus",
  "hopr-chain-indexer/prometheus",
  "hopr-db-sql/prometheus",
]

[dependencies]
alloy = { workspace = true, default-features = false, features = [
  "essentials",
  "json-rpc",
] }
async-channel = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
smart-default = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
validator = { workspace = true }

hopr-chain-actions = { workspace = true }
hopr-chain-indexer = { workspace = true }
hopr-chain-types = { workspace = true }
hopr-async-runtime = { workspace = true }
hopr-chain-rpc = { workspace = true }
hopr-crypto-types = { workspace = true }
hopr-db-sql = { workspace = true }
hopr-internal-types = { workspace = true }
hopr-primitive-types = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
hopr-db-sql = { workspace = true, features = ["runtime-tokio"] }
