[package]
name = "hopr-chain-client"
version = "0.1.0"
edition = "2024"
description = "Client connector to Blokli"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[dependencies]
cynic = { workspace = true }
petgraph = { workspace = true }
moka = { workspace = true }
hyper = { workspace = true, features = ["client", "http2"]}
eventsource-client = { workspace = true }

hopr-api = { workspace = true }
hopr-chain-types = { workspace = true }
hopr-crypto-types = { workspace = true }
hopr-internal-types = { workspace = true }
hopr-primitive-types = { workspace = true }

[build-dependencies]
cynic-codegen = { version = "3" }

[dev-dependencies]
insta = "1"