[package]
name = "hopr-chain-connector"
version = "0.1.0"
edition = "2024"

[features]
runtime-tokio = ["hopr-async-runtime/runtime-tokio"]
testing = ["dep:hex", "blokli-client/testing"]

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
async-broadcast = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
blokli-client = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
futures-time = { workspace = true }
futures-concurrency = { workspace = true }
hex = { workspace = true, optional = true }
moka = { workspace = true }
parking_lot = { workspace = true }
petgraph = { workspace = true, features = ["rayon", "graphmap"] }
redb = "3.1.0"
serde_json = { workspace = true }
smart-default = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }

hopr-api = { workspace = true }
hopr-async-runtime = { workspace = true }
hopr-chain-types = { workspace = true }
hopr-crypto-types = { workspace = true }
hopr-internal-types = { workspace = true, features = ["serde"] }
hopr-primitive-types = { workspace = true }

[dev-dependencies]
hopr-chain-connector = { workspace = true, features = [
  "testing",
  "runtime-tokio",
] }
lazy_static = { workspace = true }
tokio = { workspace = true }
