[package]
name = "hopr-chain-connector"
version = "0.4.0"
edition = "2024"
authors = ["HOPR Association <tech@hoprnet.org>"]
description = "Implementation of HOPR Chain APIs using Blokli client"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[features]
runtime-tokio = ["hopr-async-runtime/runtime-tokio"]
testing = ["dep:hex", "blokli-client/testing", "hopr-chain-types/use-bindings"]

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
async-broadcast = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
blokli-client = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
futures-time = { workspace = true }
futures-concurrency = { workspace = true }
hex = { workspace = true, optional = true }
moka = { workspace = true, features = ["future", "sync"] }
parking_lot = { workspace = true }
petgraph = { workspace = true, features = ["rayon", "graphmap"] }
redb = "3.1.0"
serde_json = { workspace = true }
smart-default = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }

hopr-api = { workspace = true }
hopr-async-runtime = { workspace = true }
hopr-chain-types = { workspace = true }
hopr-crypto-types = { workspace = true }
hopr-internal-types = { workspace = true, features = ["serde"] }
hopr-primitive-types = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }
hopr-chain-connector = { workspace = true, features = [
  "testing",
  "runtime-tokio",
] }
insta = { workspace = true }
lazy_static = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true }
