[package]
name = "chain-db"
version = "0.4.0"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"
description = "Selected core modules"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[dependencies]
async-trait = { workspace = true }
async-lock = { workspace = true, optional = true }
hex = { workspace = true }
hex-literal = "0.4"
lazy_static = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

hopr-crypto = { workspace = true }
core-types = { workspace = true }
platform = { workspace = true }
utils-db = { workspace = true }
log = { workspace = true }
utils-types = { workspace = true }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
mockall = { version = "0.11" }
env_logger = "0.10.0"


[features]
default = []
wasm = [ "hopr-crypto/wasm", "dep:async-lock",  "core-types/wasm", "utils-db/wasm", "platform/wasm-bindgen", "utils-types/wasm" ]
