[package]
name = "chain-db"
version = "0.4.0"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"
description = "Selected core modules"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[dependencies]
async-trait = { workspace = true }
hex-literal = "0.4"
lazy_static = { workspace = true }

hopr-crypto = { workspace = true }
utils-db = { workspace = true }
log = { workspace = true }
hopr-internal-types = { workspace = true }
hopr-primitive-types = { workspace = true }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
mockall = { version = "0.11" }
env_logger = "0.10.0"


[features]
default = []
wasm = ["utils-db/js"]
