[package]
name = "chain-db"
version = "0.4.0"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"
description = "Selected core modules"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[dependencies]
async-trait = { workspace = true }
hex-literal = { workspace = true }
lazy_static = { workspace = true }

hopr-crypto-types = { workspace = true }
utils-db = { workspace = true }
tracing = { workspace = true }
hopr-internal-types = { workspace = true }
hopr-primitive-types = { workspace = true }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
mockall = { workspace = true }
env_logger = "0.10.0"


[features]
default = []
js = ["utils-db/js"]
