[package]
name = "hopr-chain-indexer"
version = "0.8.0"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"
description = "Core-Ethereum-specific interaction with the backend database"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0"

[lib]
crate-type = ["rlib"]

[features]
default = []
runtime-tokio = [
  "hopr-chain-rpc/runtime-tokio",
  "hopr-db-sql/runtime-tokio",
  "hopr-async-runtime/runtime-tokio",
]
prometheus = [
  "dep:hopr-metrics",
  "hopr-chain-rpc/prometheus",
  "hopr-db-sql/prometheus",
]

[dependencies]
alloy = { workspace = true, default-features = false, features = [
  "essentials",
  "json-rpc",
  "node-bindings",
] }
async-channel = { workspace = true }
async-trait = { workspace = true }
flate2 = "1.0"
futures = { workspace = true }
futures-util = "0.3"
lazy_static = { workspace = true }
multiaddr = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
scopeguard = "1.2"
smart-default = { workspace = true }
tar = "0.4"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "time"] }
tracing = { workspace = true }

hopr-bindings = { workspace = true }
hopr-chain-types = { workspace = true }
hopr-async-runtime = { workspace = true }
hopr-chain-rpc = { workspace = true }
hopr-crypto-types = { workspace = true }
hopr-db-api = { workspace = true }
hopr-db-entity = { workspace = true }
hopr-db-sql = { workspace = true }
hopr-internal-types = { workspace = true }
hopr-metrics = { workspace = true, optional = true }
hopr-primitive-types = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
hex-literal = { workspace = true }
mockall = { workspace = true }
primitive-types = { workspace = true }
tempfile = "3.8"
test-log = { workspace = true }
tokio = { workspace = true }

hopr-crypto-random = { workspace = true }
hopr-chain-rpc = { workspace = true, features = ["runtime-tokio"] }
hopr-db-sql = { workspace = true, features = ["runtime-tokio"] }
