[package]
name = "hopr-chain-rpc"
version = "0.6.0"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"
description = "Abstraction over Ethereum RPC provider client"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[features]
default = []
prometheus = ["dep:hopr-metrics"]
runtime-async-std = [
  "dep:async-std",
  "hopr-async-runtime/runtime-async-std",
  "dep:surf",
  "dep:surf-governor",
]
runtime-tokio = [
  "hopr-async-runtime/runtime-tokio",
  "dep:reqwest",
  "dep:governor",
  "dep:surf",
  "dep:surf-governor",
]

[dependencies]
alloy = { workspace = true, default-features = false, features = ["essentials", "json-rpc", "node-bindings"] }
async-trait = { workspace = true }
async-std = { workspace = true, optional = true, features = [
  "attributes",
  "unstable",
] }
async-stream = { workspace = true }
ethers = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
governor = { workspace = true, optional = true }
http-types = { workspace = true }
lazy_static = { workspace = true }
moka = { workspace = true }
primitive-types = { workspace = true }
reqwest = { workspace = true, optional = true, features = [
  "brotli",
  "zstd",
  "gzip",
  "json",
] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
smart-default = { workspace = true }
surf = { workspace = true, optional = true }
surf-governor = { workspace = true, optional = true }
thiserror = { workspace = true }
url = { workspace = true }
validator = { workspace = true }

hopr-bindings = { workspace = true }
hopr-crypto-types = { workspace = true }
hopr-chain-types = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
hopr-metrics = { workspace = true, optional = true }
hopr-primitive-types = { workspace = true }
hopr-internal-types = { workspace = true }
hopr-async-runtime = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
async-std = { workspace = true, features = ["attributes", "unstable"] }
tokio = { workspace = true }
reqwest = { workspace = true }
governor = { workspace = true }
env_logger = { workspace = true }
mockall = { workspace = true }
mockito = { workspace = true }
hex-literal = { workspace = true }
test-log = { workspace = true }
tempfile = { workspace = true }
