[package]
name = "hopr-chain-rpc"
version = "0.7.2"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"
description = "Abstraction over Ethereum RPC provider client"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[features]
default = []
prometheus = ["dep:hopr-metrics"]
runtime-tokio = ["hopr-async-runtime/runtime-tokio", "dep:reqwest"]

[dependencies]
alloy = { workspace = true, default-features = false, features = [
  "essentials",
  "json-rpc",
  "node-bindings",
] }
async-trait = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
http = { workspace = true }
lazy_static = { workspace = true }
moka = { workspace = true }
primitive-types = { workspace = true }
rust-stream-ext-concurrent = { workspace = true }
reqwest = { workspace = true, optional = true, features = ["brotli", "zstd"] }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
smart-default = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
validator = { workspace = true }

hopr-bindings = { workspace = true }
hopr-crypto-types = { workspace = true }
hopr-chain-types = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
hopr-metrics = { workspace = true, optional = true }
hopr-primitive-types = { workspace = true }
hopr-internal-types = { workspace = true }
hopr-async-runtime = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
env_logger = { workspace = true }
mockall = { workspace = true }
mockito = { workspace = true }
hex-literal = { workspace = true }
test-log = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing-test = { workspace = true }
