[package]
name = "hopr-chain-types"
version = "0.10.0"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"
description = "Core-Ethereum-specific interaction with the backend database"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = { workspace = true }
alloy = { workspace = true, default-features = false, features = [
  "contract",
  "node-bindings",
] }
async-trait = { workspace = true }
libp2p-identity = { workspace = true }
lazy_static = { workspace = true }
tracing = { workspace = true }
multiaddr = { workspace = true }
hex-literal = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }

hopr-bindings = { workspace = true }
hopr-crypto-types = { workspace = true }
hopr-internal-types = { workspace = true }
hopr-primitive-types = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
hex = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

hopr-crypto-types = { workspace = true, features = ["fixed-rng"] }
hopr-internal-types = { workspace = true, features = ["fixed-rng"] }

[features]
default = []
