[package]
name = "hopr-chain-types"
version = "0.11.1"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"
description = "Core-Ethereum-specific interaction with the backend database"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
hex-literal = { workspace = true }
lazy_static = { workspace = true }
multiaddr = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }

hopr-bindings = { workspace = true, optional = true }
hopr-crypto-types = { workspace = true }
hopr-internal-types = { workspace = true }
hopr-primitive-types = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
hex = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
insta = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

hopr-internal-types = { workspace = true, features = ["serde"] }

[features]
default = ["use-bindings"]
use-bindings = ["dep:hopr-bindings"]
