[package]
name = "hopr-async-runtime"
version = "0.3.0"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"
description = "Feature-selected async executor for HOPR"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[features]
default = ["runtime-tokio"]
runtime-tokio = ["dep:tokio"]
runtime-futures = []
prometheus = ["dep:hopr-metrics", "dep:lazy_static"]

[dependencies]
tokio = { workspace = true, optional = true, features = ["time", "sync"] }
futures = { workspace = true }
hopr-metrics = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
