[package]
name = "hopr-async-runtime"
version = "0.4.0"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"
description = "Feature-selected async executor for HOPR"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[features]
default = []
runtime-tokio = ["dep:tokio"]

[dependencies]
auto_impl = { workspace = true }
indexmap = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, optional = true }
