[package]
name = "hopr-async-runtime"
version = "0.5.0"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition.workspace = true
rust-version.workspace = true
description = "Feature-selected async executor for HOPR"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[features]
default = []
runtime-tokio = ["dep:tokio"]
async-lock = ["dep:async-lock"]

[dependencies]
auto_impl = { workspace = true }
async-lock = { workspace = true, optional = true }
indexmap = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, optional = true, features = ["time", "sync"] }
